--- a/english/Assignments.html
+++ b/english/Assignments.html
@@ -1749,7 +1749,55 @@
     
 </div>
 
+
 <!-- Javascript -->
+ 
+<!-- Javascript -->
+<!-- Javascript -->
+<script src="assets/bundles/libscripts.bundle.js"></script>    
+<script src="assets/bundles/vendorscripts.bundle.js"></script>
+
+<script src="assets/bundles/datatablescripts.bundle.js"></script>
+<script src="../assets/vendor/jquery-datatable/buttons/dataTables.buttons.min.js"></script>
+<script src="../assets/vendor/jquery-datatable/buttons/buttons.bootstrap4.min.js"></script>
+<script src="../assets/vendor/jquery-datatable/buttons/buttons.colVis.min.js"></script>
+<script src="../assets/vendor/jquery-datatable/buttons/buttons.html5.min.js"></script>
+<script src="../assets/vendor/jquery-datatable/buttons/buttons.print.min.js"></script>
+
+<script src="../assets/vendor/sweetalert/sweetalert.min.js"></script> <!-- SweetAlert Plugin Js --> 
+
+
+<script src="assets/bundles/mainscripts.bundle.js"></script>
+<script src="assets/bundles/morrisscripts.bundle.js"></script>
+<script src="assets/js/pages/tables/jquery-datatable.js"></script>
+<script>
+    $('.sparkbar').sparkline('html', { type: 'bar' });
+</script>
+
+<script>
+    function myFunction() {
+      var input, filter, table, tr, td, i, txtValue;
+      input = document.getElementById("Mysearch");
+      filter = input.value.toUpperCase();
+      table = document.getElementById("Mytable");
+      tr = table.getElementsByTagName("tr");
+      for (i = 0; i < tr.length; i++) {
+        td = tr[i].getElementsByTagName("td")[5];
+        if (td) {
+          txtValue = td.textContent || td.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            tr[i].style.display = "";
+          } else {
+            tr[i].style.display = "none";
+          }
+        }       
+      }
+    }
+    </script>
+</body>
+</html>
+
+<!-- Javascript
 <script src="assets/bundles/libscripts.bundle.js"></script>    
 <script src="assets/bundles/vendorscripts.bundle.js"></script>
 
@@ -1767,7 +1815,7 @@
 <script src="../assets/vendor/sweetalert/sweetalert.min.js"></script> <!-- SweetAlert Plugin Js --> 
 <script src="assets/js/pages/ui/dialogs.js"></script><!-- SweetAlert Plugin Js --> 
 
-<script>
+<!-- <script>
     $(function() {
         // validation needs name of the element
         $('#food').multiselect();
@@ -1832,7 +1880,7 @@
 
 <script>
     $(".anyname").chosen();
-</script>
+</script>  -->
 
 
 </body>
