--- a/english/Assignments.html
+++ b/english/Assignments.html
@@ -1194,7 +1194,7 @@
             <div class="block-header">
                 <div class="row">
                     <div class="col-lg-5 col-md-8 col-sm-12">                        
-                        <h2>DISPLAY STUDENTS DATA:</h2>
+                        <h2>ADD INSTITUTIONS:</h2>
                     </div>            
                 </div>
             </div>
