--- a/english/Assignments.html
+++ b/english/Assignments.html
@@ -1116,7 +1116,19 @@
                                             <input type="text" name="InstitutionName"    maxlength="28" placeholder="Institution Name" value="" class="form-control" onkeydown="return /[a-z, ]/i.test(event.key)" onblur="if (this.value == '') {this.value = '';}" onfocus="if (this.value == '') {this.value = '';}" required >
                                         </div>
                                     </div>
-                                  </div>
+                                    <div class="col">
+                                        <div class="form-group ">
+                                            <label>INSTITUTION NAME:</label>
+                                            <input type="text" name="InstitutionName"    maxlength="28" placeholder="Institution Name" value="" class="form-control" onkeydown="return /[a-z, ]/i.test(event.key)" onblur="if (this.value == '') {this.value = '';}" onfocus="if (this.value == '') {this.value = '';}" required >
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-group ">
+                                            <label>INSTITUTION NAME:</label>
+                                            <input type="text" name="InstitutionName"    maxlength="28" placeholder="Institution Name" value="" class="form-control" onkeydown="return /[a-z, ]/i.test(event.key)" onblur="if (this.value == '') {this.value = '';}" onfocus="if (this.value == '') {this.value = '';}" required >
+                                        </div>
+                                    </div>
+                                </div>
  
                                    
                               
