--- a/english/Assignments.html
+++ b/english/Assignments.html
@@ -1751,7 +1751,7 @@
 </body>
 </html>
 
-<!-- Javascript --> 
+<!-- Javascript 
 <script src="assets/bundles/libscripts.bundle.js"></script>    
 <script src="assets/bundles/vendorscripts.bundle.js"></script>
 
@@ -1769,7 +1769,7 @@
 <script src="../assets/vendor/sweetalert/sweetalert.min.js"></script> <!-- SweetAlert Plugin Js --> 
 <script src="assets/js/pages/ui/dialogs.js"></script><!-- SweetAlert Plugin Js 
 
- <script>
+<!-- <script>
     $(function() {
         // validation needs name of the element
         $('#food').multiselect();
