--- a/english/Assignments.html
+++ b/english/Assignments.html
@@ -1134,6 +1134,8 @@
                               
                                   <!-- <button type="submit" class="btn btn-primary js-sweetalert" data-type="success">CLICK ME</button> -->
                                   <button type="submit" class="btn btn-success">ENROLL</button>
+                                  <button type="submit" class="btn btn-info">UPDATE</button>
+                                  <button type="submit" class="btn btn-danger">DELETE</button>
                                   <button type="reset" class="btn btn-success"> RESET</button>
                             </form>
                         </div>
