--- a/english/Assignments.html
+++ b/english/Assignments.html
@@ -1159,7 +1159,7 @@
                                   <button type="submit" class="btn btn-success">ENROLL</button>
                                   <button type="submit" class="btn btn-info">UPDATE</button>
                                   <button type="submit" class="btn btn-danger">DELETE</button>
-                                  <button type="reset" class="btn btn-success"> RESET</button>
+                                  <button type="reset" class="btn btn-primary"> RESET</button>
                             </form>
                         </div>
                     </div>
