--- a/english/Assignments.html
+++ b/english/Assignments.html
@@ -1128,10 +1128,19 @@
                                             <!-- <input type="text" name="InstitutionType"   placeholder="Institution Type" value="" class="form-control" onkeydown="return /[a-z, ]/i.test(event.key)" onblur="if (this.value == '') {this.value = '';}" onfocus="if (this.value == '') {this.value = '';}" required > -->
                                             <select name="InstitutionType" placeholder="Institution Type" value=""  class="form-control" required>
                                                 <option value="" selected="" disabled="" >Institution Type</option>
-                                                <option value="Kg">Kg</option>
-                                                <option value="Primary">Primary</option>
-                                                <option value="Preparatory">Preparatory</option>
-                                                <option value="Secondary">Secondary</option>
+                                                <option value="KGSS">KGSS</option>
+                                                <option value="PRISS">PRISS</option>
+                                                <option value="PRESS">PRESS</option>
+                                                <option value="SECSS">SECSS</option>
+                                                <option value="KGPRISS">KGPRISS</option>
+                                                <option value="PRIPRESS">PRIPRESS</option>
+                                                <option value="PRESECSS">PRESECSS</option>
+                                                <option value="KGPRIPRESS">KGPRIPRESS</option>
+                                                <option value="PRIPRESECSS">PRIPRESECSS</option>
+                                                <option value="KGPRIPRESECSS">KGPRIPRESECSS</option>
+                                                <option value="INSS">INSS</option>
+                                                <option value="UNIS">UNIS</option>
+                                                <option value="EMIS">EMIS</option>
                                             </select>
                                         </div>
                                     </div>
@@ -1193,12 +1202,12 @@
                                 <table id="Mytable" class="table table-bordered table-hover js-basic-example dataTable table-custom">
                                     <thead>
                                         <tr>
+                                            <th> ID</th>
                                             <th> NAME</th>
-                                            <th> DATE</th>
                                             <th> TYPE</th>
-                                            <th> SCHOOL</th>
-                                            <th> STAGE</th>
-                                            <th> CLASS</th>
+                                            <th> REGION</th>
+                                            <th> CITY</th>
+                                            <th> DISTRICT</th>
                                         </tr>
                                     </thead>
                                     <tbody>
